<?xml version="1.0"?>
<package>
  <name>ieee2015_gazebo_sim</name>
  <version>0.0.0</version>
  <description>The ieee2015_gazebo_sim package</description>
  <maintainer email="ngoldfarb@ufl.edu"></maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <export>
  </export>
</package>
