<?xml version="1.0"?>
<package>
  <name>ieee2015_launch</name>
  <version>0.0.0</version>
  <description>The ieee2015_launch package</description>
  <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>