<?xml version="1.0"?>
<package>
  <name>ieee2015_localization</name>
  <version>0.0.0</version>
  <description>The ieee2015_localization package</description>

  <maintainer email="jpanikulam@ufl.edu">jacob</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geoemetry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geoemetry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>