<?xml version="1.0"?>
<package>
  <name>ieee2015_mission_control</name>
  <version>0.0.0</version>
  <description>The ieee2015_mission_control package</description>

  <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
  <maintainer email="christinemoore321@gmail.com">Christine Moore</maintainer>

  <license>GPL2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>