<?xml version="1.0"?>
<package>
  <name>ieee2015_robot</name>
  <version>0.0.0</version>
  <description>The ieee2015_robot package</description>

  <maintainer email="jacob@ufl.edu">Jacob Panikulam</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>

  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <export>
  </export>
</package>