<?xml version="1.0"?>
<package>
  <name>ieee2015_tf_broadcaster</name>
  <version>0.0.0</version>
  <description>The ieee2015_tf_broadcaster package</description>

  <maintainer email="lbassettaudain@ufl.edu">Lucas Bassett-Audain</maintainer>

  <license>BSD</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
