<?xml version="1.0"?>
<package>
  <name>xmega_connector</name>
  <version>0.0.0</version>
  <description>The xmega_connector package</description>

  <maintainer email="khaled.hassan@gmail.com">Khaled Hassan</maintainer>
  <maintainer email="masonturner@ufl.edu">Mason Turner</maintainer>
  <license>BSD</license>


  <url type="website">http://github.com/ufieee2014</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <export>

  </export>
</package>
